--- a/html/css/_header.css
+++ b/html/css/_header.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url('/html/css/utilities.css');
 
 :root {
     --light-grey: rgba(180, 180, 180, .8);
@@ -14,13 +15,6 @@
     src: url("/html/source/font/MV-SKIFER.otf");
     font-weight: 600;
     font-style: bold;
-}
-
-@font-face {
-    font-family: Inter;
-    src: url("/html/source/font/Inter-VariableFont_opsz\,wght.ttf");
-    font-size: 12px;
-    font-weight: 300;
 }
 
 header {
@@ -212,6 +206,13 @@ header {
         }
     }
 
+    a.more {
+        margin: 0;
+        padding: 0;
+        color: inherit;
+        width: 100%;
+    }
+
     .relevant-wrapper {
         a {
             color: inherit;
@@ -295,6 +296,21 @@ header {
                         color: white;
                         text-transform: uppercase;
                     }
+
+                    .subscribe-wrapper {
+                        padding: 0;
+
+                        input[type='checkbox'] {
+                            height: 3vw;
+                            width: 3vw;
+                            margin: 0;
+                            margin-right: 1rem;
+                        }
+
+                        label {
+                            color: black;
+                        }
+                    }
                 }
 
                 .sign-in-separator {
@@ -331,7 +347,6 @@ header {
                             margin: .45rem .5rem .5rem 1rem;
                         }
                     }
-
                 }
             }
         }
